@@ -1,5 +1,6 @@
 1.4.0i4:
     Core & Setup:
+    * 4286 SNMP MIBs of the Event Console can now be packed using MKPs...
     * 4269 FIX: Verifying unexpected keys in check_info while loading checks...
     * 4281 FIX: Fixed piggyback hosts with spaces in names leading to crashes...
 
